update v6 + fixes
