# Monitor-openapi-3.0.2.yml
@@ -2,7 +2,7 @@
 # / __(_)_ __  _ __| (_)__(_) |_ /_/
 # \__ \ | '  \| '_ \ | / _| |  _/ -_)
 # |___/_|_|_|_| .__/_|_\__|_|\__\___|
-#             |_| Module: Monitor 1.2
+#             |_| Module: Monitor 2.0
 components:
   schemas:
     Error404:
@@ -127,11 +127,17 @@ components:
         monHeaTotalUsers:
           description: Total Users
           type: integer
+        monHeaInactiveUsers:
+          description: Inactive Users
+          type: integer
         monHeaFreeHeap:
           description: Free Heap
           type: integer
         monHeaActions:
           description: Actions
+          type: integer
+        monHeaActiveUsers:
+          description: Active Users
           type: integer
         monHeaAppVersion:
           description: App Version
@@ -154,14 +160,14 @@ components:
         monHeaBuiltOn:
           description: Built On
           type: string
-        monHeaFreeDisk:
-          description: Free Disk
-          type: integer
         monHeaObjectCacheRatio:
           description: Object Cache Usage
           type: number
         monHeaTotalFreeSize:
           description: Total Free Size
+          type: integer
+        monHeaWebserviceUsers:
+          description: Webservice Users
           type: integer
         monHeaFunctions:
           description: Functions
@@ -169,17 +175,11 @@ components:
         monHeaStates:
           description: States
           type: integer
-        monHeaDiskUsage:
-          description: Disk Usage
-          type: number
         monHeaVersion:
           description: Platform Version
           type: string
         monHeaGroups:
           description: Groups
-          type: integer
-        monHeaUsableDisk:
-          description: Usable Disk
           type: integer
         monHeaInstId__monInstUrl:
           description: Instance URL
@@ -194,17 +194,14 @@ components:
           description: Date
           type: string
           example: yyyy-MM-dd HH:mm:ss
-        monHeaTotalDisk:
-          description: Total Disk
-          type: integer
         monHeaEnabledUsers:
           description: Enabled Users
           type: integer
         monHeaDatabasePatchLevel:
           description: Database Patch Level
           type: string
-        monHeaMaxGrantCache:
-          description: Max Grant Cache
+        monHeaPendingUsers:
+          description: Pending Users
           type: integer
         monHeaAttributes:
           description: Attributes
@@ -227,9 +224,6 @@ components:
         monHeaMaxHeapSize:
           description: Max Heap Size
           type: integer
-        monHeaGrantCacheRatio:
-          description: Grant Cache Usage
-          type: number
         monHeaLastLogin:
           description: Last login
           type: string
@@ -1785,30 +1779,6 @@ paths:
       - schema:
           type: integer
         in: query
-        name: monHeaFreeDisk
-        description: Search filter for Free Disk
-        required: false
-      - schema:
-          type: integer
-        in: query
-        name: monHeaUsableDisk
-        description: Search filter for Usable Disk
-        required: false
-      - schema:
-          type: integer
-        in: query
-        name: monHeaTotalDisk
-        description: Search filter for Total Disk
-        required: false
-      - schema:
-          type: number
-        in: query
-        name: monHeaDiskUsage
-        description: Search filter for Disk Usage
-        required: false
-      - schema:
-          type: integer
-        in: query
         name: monHeaFreeHeap
         description: Search filter for Free Heap
         required: false
@@ -1841,18 +1811,6 @@ paths:
         in: query
         name: monHeaGrantCache
         description: Search filter for Grant Cache
-        required: false
-      - schema:
-          type: integer
-        in: query
-        name: monHeaMaxGrantCache
-        description: Search filter for Max Grant Cache
-        required: false
-      - schema:
-          type: number
-        in: query
-        name: monHeaGrantCacheRatio
-        description: Search filter for Grant Cache Usage
         required: false
       - schema:
           type: integer
@@ -1943,6 +1901,30 @@ paths:
         in: query
         name: monHeaLastLogin
         description: Search filter for Last login
+        required: false
+      - schema:
+          type: integer
+        in: query
+        name: monHeaActiveUsers
+        description: Search filter for Active Users
+        required: false
+      - schema:
+          type: integer
+        in: query
+        name: monHeaInactiveUsers
+        description: Search filter for Inactive Users
+        required: false
+      - schema:
+          type: integer
+        in: query
+        name: monHeaPendingUsers
+        description: Search filter for Pending Users
+        required: false
+      - schema:
+          type: integer
+        in: query
+        name: monHeaWebserviceUsers
+        description: Search filter for Webservice Users
         required: false
       tags:
       - MonHealth
@@ -2276,7 +2258,7 @@ info:
     email: contact@simplicitesoftware.com
   description: API for module Monitor
   title: Monitor
-  version: '1.2'
+  version: '2.0'
 tags:
 - name: MonCntPrj
   description: To contact in case of problem
